{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 498,
  "lineage": "6994aa76-33c0-dece-9442-82134ad78ab3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04fa99a9717c3c34e",
            "arn": "arn:aws:ec2:eu-north-1:134400125759:elastic-ip/eipalloc-04fa99a9717c3c34e",
            "association_id": "eipassoc-0dba9f1f9340d1595",
            "domain": "vpc",
            "id": "eipalloc-04fa99a9717c3c34e",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0b5153f056ea8c43e",
            "private_dns": "ip-10-0-1-21.eu-north-1.compute.internal",
            "private_ip": "10.0.1.21",
            "public_dns": "ec2-51-21-9-52.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.21.9.52",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ymontagnier-tp09-ex01-nat-eip"
            },
            "tags_all": {
              "Name": "ymontagnier-tp09-ex01-nat-eip",
              "Owner": "ymontagnier"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09a9858973b288bdd",
            "arn": "arn:aws:ec2:eu-north-1:134400125759:instance/i-0cb1f6c9214573908",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cb1f6c9214573908",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ymontagnier-tp09-ex01-bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0561d515b18e87510",
            "private_dns": "ip-10-0-1-227.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.227",
            "public_dns": "ec2-13-60-16-89.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.60.16.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "ymontagnier-tp09-ex01",
                  "Owner": "ymontagnier"
                },
                "tags_all": {
                  "Name": "ymontagnier-tp09-ex01",
                  "Owner": "ymontagnier"
                },
                "throughput": 125,
                "volume_id": "vol-0845dab27056d7128",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07d091d762551bf06",
            "tags": {
              "Name": "ymontagnier-tp09-ex01-bastion"
            },
            "tags_all": {
              "Name": "ymontagnier-tp09-ex01-bastion",
              "Owner": "ymontagnier"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03f89c849a3fda546"
            ]
          },
          "dependencies": [
            "aws_key_pair.bastion",
            "aws_security_group.bastion_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:internet-gateway/igw-0f77ef57a2f7cafe6",
            "id": "igw-0f77ef57a2f7cafe6",
            "owner_id": "134400125759",
            "tags": {
              "Name": "ymontagnier-tp09-ex01-InternetGateway"
            },
            "tags_all": {
              "Name": "ymontagnier-tp09-ex01-InternetGateway",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-091d4c6c9fd8429ad"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:loadbalancer/app/ymontagnier-nextcloud-alb/a1303e0a40c3b9de",
            "arn_suffix": "app/ymontagnier-nextcloud-alb/a1303e0a40c3b9de",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ymontagnier-nextcloud-alb-871239936.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:loadbalancer/app/ymontagnier-nextcloud-alb/a1303e0a40c3b9de",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ymontagnier-nextcloud-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ca4f43e69746fb09"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05929ef025633f73b"
              },
              {
                "subnet_id": "subnet-07d091d762551bf06"
              },
              {
                "subnet_id": "subnet-08ca3ab073271aa2b"
              }
            ],
            "subnets": [
              "subnet-05929ef025633f73b",
              "subnet-07d091d762551bf06",
              "subnet-08ca3ab073271aa2b"
            ],
            "tags": {
              "Name": "ymontagnier-tp09-ex01-nextcloud-alb"
            },
            "tags_all": {
              "Name": "ymontagnier-tp09-ex01-nextcloud-alb",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-091d4c6c9fd8429ad",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_security_group.nextcloud-alb-sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:listener/app/ymontagnier-nextcloud-alb/a1303e0a40c3b9de/eab9c8e35fd101af",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:targetgroup/ymontagnier-nextcloud-alb-tg/b413f3c5424c17a2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:listener/app/ymontagnier-nextcloud-alb/a1303e0a40c3b9de/eab9c8e35fd101af",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:loadbalancer/app/ymontagnier-nextcloud-alb/a1303e0a40c3b9de",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "ymontagnier-tp09-ex01-nextcloud-alb-http-listener"
            },
            "tags_all": {
              "Name": "ymontagnier-tp09-ex01-nextcloud-alb-http-listener",
              "Owner": "ymontagnier"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nextcloud",
            "aws_lb_target_group.nextcloud",
            "aws_security_group.nextcloud-alb-sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:targetgroup/ymontagnier-nextcloud-alb-tg/b413f3c5424c17a2",
            "arn_suffix": "targetgroup/ymontagnier-nextcloud-alb-tg/b413f3c5424c17a2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:targetgroup/ymontagnier-nextcloud-alb-tg/b413f3c5424c17a2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-north-1:134400125759:loadbalancer/app/ymontagnier-nextcloud-alb/a1303e0a40c3b9de"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ymontagnier-nextcloud-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ymontagnier-tp09-ex01-nextcloud-alb-tg"
            },
            "tags_all": {
              "Name": "ymontagnier-tp09-ex01-nextcloud-alb-tg",
              "Owner": "ymontagnier"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-091d4c6c9fd8429ad"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04fa99a9717c3c34e",
            "association_id": "eipassoc-0dba9f1f9340d1595",
            "connectivity_type": "public",
            "id": "nat-068d0764f48d133d0",
            "network_interface_id": "eni-0b5153f056ea8c43e",
            "private_ip": "10.0.1.21",
            "public_ip": "51.21.9.52",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07d091d762551bf06",
            "tags": {
              "Name": "ymontagnier-tp09-ex01-NATGateway"
            },
            "tags_all": {
              "Name": "ymontagnier-tp09-ex01-NATGateway",
              "Owner": "ymontagnier"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:network-acl/acl-0c45a404838ba476c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0c45a404838ba476c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              },
              {
                "action": "deny",
                "cidr_block": "13.48.4.200/30",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "owner_id": "134400125759",
            "subnet_ids": [
              "subnet-05929ef025633f73b",
              "subnet-05dcdd8db722787f5",
              "subnet-07b94325a14c0b320",
              "subnet-07d091d762551bf06",
              "subnet-07f4a1a6f80c2f3e9",
              "subnet-08ca3ab073271aa2b"
            ],
            "tags": {
              "Name": "ymontagnier-tp09-ex01-acl"
            },
            "tags_all": {
              "Name": "ymontagnier-tp09-ex01-acl",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-091d4c6c9fd8429ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "private_acl_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-054886d069cb2e5aa",
            "network_acl_id": "acl-0c45a404838ba476c",
            "subnet_id": "subnet-07b94325a14c0b320"
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-04a3d137f97954cde",
            "network_acl_id": "acl-0c45a404838ba476c",
            "subnet_id": "subnet-05dcdd8db722787f5"
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0f4f6d80e4c272440",
            "network_acl_id": "acl-0c45a404838ba476c",
            "subnet_id": "subnet-07f4a1a6f80c2f3e9"
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "public_acl_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-04c0052ecb0fdd022",
            "network_acl_id": "acl-0c45a404838ba476c",
            "subnet_id": "subnet-07d091d762551bf06"
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-06d93435d9a8a89a2",
            "network_acl_id": "acl-0c45a404838ba476c",
            "subnet_id": "subnet-05929ef025633f73b"
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-08a05bcee2f64ff31",
            "network_acl_id": "acl-0c45a404838ba476c",
            "subnet_id": "subnet-08ca3ab073271aa2b"
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:route-table/rtb-0d4d6222eedc57c62",
            "id": "rtb-0d4d6222eedc57c62",
            "owner_id": "134400125759",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-068d0764f48d133d0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ymontagnier-tp09-ex01-private-rtb-eu-north-1a"
            },
            "tags_all": {
              "Name": "ymontagnier-tp09-ex01-private-rtb-eu-north-1a",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-091d4c6c9fd8429ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.public_nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:route-table/rtb-0d29b017de86fb405",
            "id": "rtb-0d29b017de86fb405",
            "owner_id": "134400125759",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-068d0764f48d133d0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ymontagnier-tp09-ex01-private-rtb-eu-north-1b"
            },
            "tags_all": {
              "Name": "ymontagnier-tp09-ex01-private-rtb-eu-north-1b",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-091d4c6c9fd8429ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.public_nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:route-table/rtb-06c7139ec7ada40d7",
            "id": "rtb-06c7139ec7ada40d7",
            "owner_id": "134400125759",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-068d0764f48d133d0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ymontagnier-tp09-ex01-private-rtb-eu-north-1c"
            },
            "tags_all": {
              "Name": "ymontagnier-tp09-ex01-private-rtb-eu-north-1c",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-091d4c6c9fd8429ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.public_nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:route-table/rtb-0372fe356a9ff463a",
            "id": "rtb-0372fe356a9ff463a",
            "owner_id": "134400125759",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f77ef57a2f7cafe6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ymontagnier-tp09-ex01-public-rtb"
            },
            "tags_all": {
              "Name": "ymontagnier-tp09-ex01-public-rtb",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-091d4c6c9fd8429ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a188272f6112b003",
            "route_table_id": "rtb-0d4d6222eedc57c62",
            "subnet_id": "subnet-07b94325a14c0b320"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.public_nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0644ccde507618030",
            "route_table_id": "rtb-0d29b017de86fb405",
            "subnet_id": "subnet-05dcdd8db722787f5"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.public_nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6387957188b063d",
            "route_table_id": "rtb-06c7139ec7ada40d7",
            "subnet_id": "subnet-07f4a1a6f80c2f3e9"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.public_nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8f75c411094261c",
            "route_table_id": "rtb-0372fe356a9ff463a",
            "subnet_id": "subnet-07d091d762551bf06"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070b5fd2a1afdcb4a",
            "route_table_id": "rtb-0372fe356a9ff463a",
            "subnet_id": "subnet-05929ef025633f73b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b00c5e8299fd4f30",
            "route_table_id": "rtb-0372fe356a9ff463a",
            "subnet_id": "subnet-08ca3ab073271aa2b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group/sg-03f89c849a3fda546",
            "description": "Allow SSH inbound traffic from ynov and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f89c849a3fda546",
            "ingress": [
              {
                "cidr_blocks": [
                  "195.7.117.146/32",
                  "176.138.11.81/32",
                  "13.38.79.125/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ymontagnier-tp09-ex01-bastion-sg",
            "name_prefix": "",
            "owner_id": "134400125759",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ymontagnier-tp09-ex01-bastion-sg"
            },
            "tags_all": {
              "Name": "ymontagnier-tp09-ex01-bastion-sg",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-091d4c6c9fd8429ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group/sg-0a3116427c453f076",
            "description": "Security group for Nextcloud EFS",
            "egress": [],
            "id": "sg-0a3116427c453f076",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-095d9c2bab66ecbf9"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "ymontagnier-tp09-ex01-nextcloud-efs-sg",
            "name_prefix": "",
            "owner_id": "134400125759",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ymontagnier-tp09-ex01-nextcloud-efs-sg"
            },
            "tags_all": {
              "Name": "ymontagnier-tp09-ex01-nextcloud-efs-sg",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-091d4c6c9fd8429ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nextcloud-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group/sg-0ca4f43e69746fb09",
            "description": "Security group for Nextcloud ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca4f43e69746fb09",
            "ingress": [
              {
                "cidr_blocks": [
                  "195.7.117.146/32",
                  "15.237.144.13/32",
                  "176.138.11.81/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-095d9c2bab66ecbf9"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ymontagnier-tp09-ex01-nextcloud-alb-sg",
            "name_prefix": "",
            "owner_id": "134400125759",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ymontagnier-tp09-ex01-nextcloud-alb-sg"
            },
            "tags_all": {
              "Name": "ymontagnier-tp09-ex01-nextcloud-alb-sg",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-091d4c6c9fd8429ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nextcloud_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group/sg-004aba50a6f333b5e",
            "description": "Security group for Nextcloud RDS",
            "egress": [],
            "id": "sg-004aba50a6f333b5e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-095d9c2bab66ecbf9"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "ymontagnier-tp09-ex01-nextcloud-db-sg",
            "name_prefix": "",
            "owner_id": "134400125759",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ymontagnier-tp09-ex01-nextcloud-db-sg"
            },
            "tags_all": {
              "Name": "ymontagnier-tp09-ex01-nextcloud-db-sg",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-091d4c6c9fd8429ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nextcloud_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group/sg-095d9c2bab66ecbf9",
            "description": "Allow SSH inbound traffic from bastion and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-095d9c2bab66ecbf9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03f89c849a3fda546"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ca4f43e69746fb09"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ymontagnier-tp09-ex01-nextcloud-sg",
            "name_prefix": "",
            "owner_id": "134400125759",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ymontagnier-tp09-ex01-nextcloud-sg"
            },
            "tags_all": {
              "Name": "ymontagnier-tp09-ex01-nextcloud-sg",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-091d4c6c9fd8429ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-07b94325a14c0b320",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b94325a14c0b320",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-tp09-ex01-private-eu-north-1a"
            },
            "tags_all": {
              "Name": "ymontagnier-tp09-ex01-private-eu-north-1a",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-091d4c6c9fd8429ad"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-05dcdd8db722787f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05dcdd8db722787f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-tp09-ex01-private-eu-north-1b"
            },
            "tags_all": {
              "Name": "ymontagnier-tp09-ex01-private-eu-north-1b",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-091d4c6c9fd8429ad"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-07f4a1a6f80c2f3e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f4a1a6f80c2f3e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-tp09-ex01-private-eu-north-1c"
            },
            "tags_all": {
              "Name": "ymontagnier-tp09-ex01-private-eu-north-1c",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-091d4c6c9fd8429ad"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-07d091d762551bf06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d091d762551bf06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-tp09-ex01-public-eu-north-1a"
            },
            "tags_all": {
              "Name": "ymontagnier-tp09-ex01-public-eu-north-1a",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-091d4c6c9fd8429ad"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-05929ef025633f73b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05929ef025633f73b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-tp09-ex01-public-eu-north-1b"
            },
            "tags_all": {
              "Name": "ymontagnier-tp09-ex01-public-eu-north-1b",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-091d4c6c9fd8429ad"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-08ca3ab073271aa2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ca3ab073271aa2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-tp09-ex01-public-eu-north-1c"
            },
            "tags_all": {
              "Name": "ymontagnier-tp09-ex01-public-eu-north-1c",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-091d4c6c9fd8429ad"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:vpc/vpc-091d4c6c9fd8429ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a3ed47c185c8aaa7",
            "default_route_table_id": "rtb-00cf6122a8fcbdfce",
            "default_security_group_id": "sg-00fbda84a21641dd3",
            "dhcp_options_id": "dopt-84fa2ded",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-091d4c6c9fd8429ad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00cf6122a8fcbdfce",
            "owner_id": "134400125759",
            "tags": {
              "Name": "ymontagnier-tp09-ex01-vpc"
            },
            "tags_all": {
              "Name": "ymontagnier-tp09-ex01-vpc",
              "Owner": "ymontagnier"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_from_alb_to_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-071a3f95596f34e89",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-071a3f95596f34e89",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ca4f43e69746fb09",
            "security_group_rule_id": "sgr-071a3f95596f34e89",
            "tags": {
              "Name": "Allow all outbound traffic"
            },
            "tags_all": {
              "Name": "Allow all outbound traffic",
              "Owner": "ymontagnier"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nextcloud-alb-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-07236f7840e648995",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-07236f7840e648995",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03f89c849a3fda546",
            "security_group_rule_id": "sgr-07236f7840e648995",
            "tags": {
              "Name": "Allow all outbound traffic"
            },
            "tags_all": {
              "Name": "Allow all outbound traffic",
              "Owner": "ymontagnier"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_from_nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-0a11cdcb08d74295e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0a11cdcb08d74295e",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-095d9c2bab66ecbf9",
            "security_group_rule_id": "sgr-0a11cdcb08d74295e",
            "tags": {
              "Name": "Allow all outbound traffic"
            },
            "tags_all": {
              "Name": "Allow all outbound traffic",
              "Owner": "ymontagnier"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nextcloud_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_from_alb_to_nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-071dbcdd63329dbb0",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-071dbcdd63329dbb0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0ca4f43e69746fb09",
            "security_group_id": "sg-095d9c2bab66ecbf9",
            "security_group_rule_id": "sgr-071dbcdd63329dbb0",
            "tags": {
              "Name": "Allow HTTP from ALB"
            },
            "tags_all": {
              "Name": "Allow HTTP from ALB",
              "Owner": "ymontagnier"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nextcloud-alb-sg",
            "aws_security_group.nextcloud_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_from_cloud9_to_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-06c8812a81f2fc8b6",
            "cidr_ipv4": "15.237.144.13/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-06c8812a81f2fc8b6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ca4f43e69746fb09",
            "security_group_rule_id": "sgr-06c8812a81f2fc8b6",
            "tags": {
              "Name": "Autoriser l'accès à NextCloud depuis Ynov"
            },
            "tags_all": {
              "Name": "Autoriser l'accès à NextCloud depuis Ynov",
              "Owner": "ymontagnier"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nextcloud-alb-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_from_maison_to_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-0dddf72efe40e9385",
            "cidr_ipv4": "176.138.11.81/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0dddf72efe40e9385",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ca4f43e69746fb09",
            "security_group_rule_id": "sgr-0dddf72efe40e9385",
            "tags": {
              "Name": "Autoriser l'accès à NextCloud depuis ma maison"
            },
            "tags_all": {
              "Name": "Autoriser l'accès à NextCloud depuis ma maison",
              "Owner": "ymontagnier"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nextcloud-alb-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_from_nextcloud_to_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-011875cc47b721a98",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-011875cc47b721a98",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-095d9c2bab66ecbf9",
            "security_group_id": "sg-0ca4f43e69746fb09",
            "security_group_rule_id": "sgr-011875cc47b721a98",
            "tags": {
              "Name": "Allow HTTP access from Nextcloud SG"
            },
            "tags_all": {
              "Name": "Allow HTTP access from Nextcloud SG",
              "Owner": "ymontagnier"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nextcloud-alb-sg",
            "aws_security_group.nextcloud_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_from_ynov_to_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-017b2ea00338731f3",
            "cidr_ipv4": "195.7.117.146/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-017b2ea00338731f3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ca4f43e69746fb09",
            "security_group_rule_id": "sgr-017b2ea00338731f3",
            "tags": {
              "Name": "Autoriser l'accès à NextCloud depuis Ynov"
            },
            "tags_all": {
              "Name": "Autoriser l'accès à NextCloud depuis Ynov",
              "Owner": "ymontagnier"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nextcloud-alb-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_mysql_from_nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-0d5ca271c208a9f09",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0d5ca271c208a9f09",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-095d9c2bab66ecbf9",
            "security_group_id": "sg-004aba50a6f333b5e",
            "security_group_rule_id": "sgr-0d5ca271c208a9f09",
            "tags": {
              "Name": "Allow MySQL access from Nextcloud SG"
            },
            "tags_all": {
              "Name": "Allow MySQL access from Nextcloud SG",
              "Owner": "ymontagnier"
            },
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nextcloud_db_sg",
            "aws_security_group.nextcloud_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_nfs_from_nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-0981b3dcfa088fecf",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 2049,
            "id": "sgr-0981b3dcfa088fecf",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-095d9c2bab66ecbf9",
            "security_group_id": "sg-0a3116427c453f076",
            "security_group_rule_id": "sgr-0981b3dcfa088fecf",
            "tags": {
              "Name": "Allow NFS/EFS access from Nextcloud SG"
            },
            "tags_all": {
              "Name": "Allow NFS/EFS access from Nextcloud SG",
              "Owner": "ymontagnier"
            },
            "to_port": 2049
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.efs_sg",
            "aws_security_group.nextcloud_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-088ba03c6173e3286",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-088ba03c6173e3286",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-03f89c849a3fda546",
            "security_group_id": "sg-095d9c2bab66ecbf9",
            "security_group_rule_id": "sgr-088ba03c6173e3286",
            "tags": {
              "Name": "Allow SSH from Bastion"
            },
            "tags_all": {
              "Name": "Allow SSH from Bastion",
              "Owner": "ymontagnier"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.nextcloud_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_from_cloud9_to_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-01afbc943e875e58d",
            "cidr_ipv4": "13.38.79.125/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-01afbc943e875e58d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03f89c849a3fda546",
            "security_group_rule_id": "sgr-01afbc943e875e58d",
            "tags": {
              "Name": "Allow SSH from Cloud9"
            },
            "tags_all": {
              "Name": "Allow SSH from Cloud9",
              "Owner": "ymontagnier"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_from_maison_to_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-08027e082dad53697",
            "cidr_ipv4": "176.138.11.81/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-08027e082dad53697",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03f89c849a3fda546",
            "security_group_rule_id": "sgr-08027e082dad53697",
            "tags": {
              "Name": "Allow SSH depuis ma maison"
            },
            "tags_all": {
              "Name": "Allow SSH depuis ma maison",
              "Owner": "ymontagnier"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_from_ynov_to_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-06cd02713d9579f4c",
            "cidr_ipv4": "195.7.117.146/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-06cd02713d9579f4c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03f89c849a3fda546",
            "security_group_rule_id": "sgr-06cd02713d9579f4c",
            "tags": {
              "Name": "Allow SSH from YNOV"
            },
            "tags_all": {
              "Name": "Allow SSH from YNOV",
              "Owner": "ymontagnier"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}